# pyladr

./: .gitignore  .pre-commit-config.yaml  README.md  REQUIREMENTS.md  UNIFIED_MULTI_AGENT_FRAMEWORK.md  profile.txt  pyproject.toml  vampire.in  xcb.in
.github/workflows/: lint.yml  test.yml
docs/: API_REFERENCE.md  CONTRIBUTING.md  C_PROVER9_COMPATIBILITY.md  FORTE_ALGORITHM_GUIDE.md  FORTE_CLI_INTEGRATION_GUIDE.md  FORTE_SUMMARY.md  ONLINE_LEARNING.md  PENALTY_WEIGHT_GUIDE.md  PERFORMANCE.md  QUICKSTART.md  REGRESSION_ANALYSIS_AND_METHODOLOGY.md  TROUBLESHOOTING.md  bias_integration_mechanism.md  embedding_manager_design.py  rnn2vec_algorithm_design.md  rnn2vec_architecture_plan.md  rnn2vec_performance_analysis.md  rnn2vec_test_plan.md
docs/archived/: BACK_SUBSUMPTION_LEARNING_IMPLEMENTATION.md  CLAUSE_SELECTION_RESEARCH.md  COMPLETE_ML_ENHANCEMENT_SUMMARY.md  COMPREHENSIVE_REVIEW_REPORT.md  CORRECTED_VAMPIRE_ANALYSIS.md  CRITICAL_SOUNDNESS_REGRESSION.md  DESIGN_INFERENCE_TRACKING.md  EMBEDDING_GUIDED_SEARCH_DEMO.md  ENHANCED_TRAINING_RESULTS.md  FINAL_ML_TESTING_RESULTS.md  FORTE_IMPLEMENTATION_PLAN.md  GOAL_NEGATION_FIX_COMPLETE.md  GRAPH_EMBEDDING_IMPLEMENTATION_PLAN.md  HIERARCHICAL_GNN_ARCHITECTURE.md  HIERARCHICAL_GNN_COMPATIBILITY.md  HIERARCHICAL_INTEGRATION_PLAN.md  IMPROVEMENT_CYCLE_DESIGN.md  IMPROVEMENT_PLAN.md  ML_CAPABILITIES_SUMMARY.md  ML_ENHANCEMENT_JOURNEY_COMPLETE.md  NEW_VAMPIRE_TEST_RESULTS.md  ONLINE_LEARNING_LOGGING.md  REQUIREMENTS.md  UNIFIED_MULTI_AGENT_FRAMEWORK.md  WEIGHT_ALIGNMENT_FIX.md  ml_weight_usage.md  repetition_detection_strategy.md
examples/: README.md  advanced_config.in  advanced_training_data_extraction.py  analyze_corrected_embeddings.py  analyze_embeddings.py  analyze_search_efficiency.py  compare_online_learning.py  complete_training_workflow.py  custom_model_training.py  debug_vampire_proof.py  goal_aware_comparison.py  group_commutativity.in  huntington_h4.in  ml_guided_vampire_demo.py  modular_lattice.in  monitor_hard_tests.py  online_learning_demo.py  robbins_conjecture.in  setup_ml_demo.py  simple_ml_usage.py  test_corrected_vampire.py  test_new_vampire.py  test_setup.py  test_weight_alignment.py  train_and_test_vampire.py  train_vampire_demo_quick.py  train_vampire_model.py  validate_ml_selection.py  vampire.in
examples/sample_problems/: boolean_algebra.in  simple_group.in
pyladr/: __init__.py  cli.py  cpp_backend.py  cpp_utils.py  protocols.py  threading_guide.py
pyladr/apps/: __init__.py  attack.py  clausefilter.py  clausetester.py  cli_common.py  complex.py  directproof.py  dprofiles.py  gen_trc_defs.py  get_givens.py  get_interps.py  get_kept.py  idfilter.py  interpfilter.py  interpformat.py  isofilter.py  isofilter0.py  isofilter2.py  ladr_to_tptp.py  latfilter.py  looper.py  miniscope.py  mirror_flip.py  olfilter.py  perm3.py  prooftrans.py  prover9.py  prover9_mace4.py  renamer.py  rewriter.py  rewriter2.py  sigtest.py  unfast.py  upper_covers.py
pyladr/core/: __init__.py  ac_normal_form.py  clause.py  interpretation.py  object_pool.py  substitution.py  symbol.py  term.py
pyladr/indexing/: __init__.py  discrimination_tree.py  feature_index.py  literal_index.py
pyladr/inference/: __init__.py  ac_unification.py  demodulation.py  diophantine.py  hyper_resolution.py  paramodulation.py  resolution.py  subsumption.py
pyladr/mace4/: __init__.py  bridge.py  model.py  search.py
pyladr/ml/: __init__.py  embedding_provider.py  lr_scheduling.py  online_learning.py
pyladr/monitoring/: __init__.py  comparison.py  diagnostics.py  health.py  learning_bridge.py  learning_curves.py  learning_monitor.py  learning_regression.py  memory_monitor.py  ml_memory.py  profiler.py  regression.py  search_analyzer.py
pyladr/ordering/: __init__.py  base.py  kbo.py  lrpo.py  multiset.py  termorder.py
pyladr/parallel/: __init__.py  inference_engine.py
pyladr/parsing/: __init__.py  ladr_parser.py  tokenizer.py
pyladr/search/: __init__.py  clause_formatting.py  embedding_helpers.py  given_clause.py  goal_directed.py  hierarchical_integration.py  inference_guidance.py  lazy_demod.py  ml_selection.py  nucleus_patterns.py  nucleus_penalty.py  online_integration.py  options.py  penalty_propagation.py  penalty_weight.py  priority_sos.py  proof_tracing.py  (+10 more)
scripts/: bench_timing.py  check_skolem_names.py  clause_comparison.py  compare_selections.py  debug_entropy.py  demo_back_subsumption_integration.py  demo_tree2vec_vampire.py  goal_negation_test.py  measure_entropy_performance.py  ml_tuning_guide.py  ml_weight_demo.py  profile_search.py  profile_subsumption.py  quick_ml_test.py  quick_ml_weight_demo.py  robust_perf_test.py  simple_proof_test.py  test_back_subsumption.py  test_forte_vampire.py  test_influence_levels.py  test_online_learning_logging.py  test_proof_entropy.py  test_vampire_entropy.py  tune_ml_influence.py  validate_entropy.py  verbose_ml_test.py  verify_goal_negation_fix.py  visualize_embeddings.py
tests/: AUTO_INFERENCE_TEST_STRATEGY.md  conftest.py  factories.py  test_ac_unification.py  test_demodulation.py  test_mace4.py  test_parallel.py  test_parallel_integration.py  test_paramodulation.py  test_subsumption.py
(+308 files in other folders)
