[project]
name = "pyladr"
version = "0.1.0"
description = "Python 3.14 free-threaded clone of Prover9/LADR automated theorem proving system"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.14"
authors = [{ name = "Prover9 Python Team" }]
keywords = [
  "theorem-proving",
  "automated-reasoning",
  "first-order-logic",
  "prover9",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Typing :: Typed",
]

dependencies = [
    "jupyter>=1.1.1",
    "pydantic>=2.11",
]

[project.optional-dependencies]
ml = ["torch>=2.11", "torch-geometric>=2.7"]
# Run build_cpp.sh to compile the C++ extension
cpp = ["pybind11>=2.12"]

[project.scripts]
pyprover9 = "pyladr.cli:main"
pyrenamer = "pyladr.apps.renamer:main"
"pymirror-flip" = "pyladr.apps.mirror_flip:main"
pyperm3 = "pyladr.apps.perm3:main"
pyprooftrans = "pyladr.apps.prooftrans:main"
pylooper = "pyladr.apps.looper:main"
pyattack = "pyladr.apps.attack:main"
"pyget-interps" = "pyladr.apps.get_interps:main"
"pyget-givens" = "pyladr.apps.get_givens:main"
"pyget-kept" = "pyladr.apps.get_kept:main"
"pyprover9-mace4" = "pyladr.apps.prover9_mace4:main"
pyclausefilter = "pyladr.apps.clausefilter:main"
pyclausetester = "pyladr.apps.clausetester:main"
pyinterpformat = "pyladr.apps.interpformat:main"
pyisofilter = "pyladr.apps.isofilter:main"
pyisofilter0 = "pyladr.apps.isofilter0:main"
pyisofilter2 = "pyladr.apps.isofilter2:main"
pyinterpfilter = "pyladr.apps.interpfilter:main"
pydprofiles = "pyladr.apps.dprofiles:main"
pysigtest = "pyladr.apps.sigtest:main"
pylatfilter = "pyladr.apps.latfilter:main"
pyolfilter = "pyladr.apps.olfilter:main"
pyidfilter = "pyladr.apps.idfilter:main"
"pyupper-covers" = "pyladr.apps.upper_covers:main"
pyminiscope = "pyladr.apps.miniscope:main"
pyunfast = "pyladr.apps.unfast:main"
pycomplex = "pyladr.apps.complex:main"
"pyladr-to-tptp" = "pyladr.apps.ladr_to_tptp:main"
pyrewriter = "pyladr.apps.rewriter:main"
pyrewriter2 = "pyladr.apps.rewriter2:main"
pydirectproof = "pyladr.apps.directproof:main"
"pygen-trc-defs" = "pyladr.apps.gen_trc_defs:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.1",
  "pytest-xdist>=3.5",
  "hypothesis>=6.122",
  "mypy>=1.15,<1.16",
  "ruff>=0.11",
  "pre-commit>=4.2",
  "pybind11>=2.12",
  "scikit-learn>=1.8.0",
  "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyladr"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "RUF",  # ruff-specific rules
  "PTH",  # flake8-use-pathlib
  "PL",   # pylint
  "PERF", # perflint
]
ignore = [
  "PLR0913", # too many arguments — acceptable for complex theorem prover constructors
  "PLR2004", # magic value comparison — unavoidable in algorithm code
]

[tool.ruff.lint.isort]
known-first-party = ["pyladr"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--tb=short"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests requiring C reference binary",
  "cross_validation: marks cross-validation tests comparing Python vs C output",
  "property: marks property-based tests using Hypothesis",
  "benchmark: marks performance benchmark tests",
  "requires_models: marks tests that need core data models to be implemented",
  "compatibility: marks compatibility tests for C Prover9 behavioral equivalence",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:torch",
  "ignore::DeprecationWarning:torch_geometric",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["pyladr"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
  "@overload",
]
